# mako

./: .gitignore  Cargo.toml  README.md  build.rs
proto/: sts.proto
src/: client.rs  jwt.rs  main.rs  server.rs
test/: server.test.crt  server.test.key
