[package]
name = "mako"
version = "0.1.0"
edition = "2021"

[build-dependencies]
tonic-build = "0.8"

[dependencies]
jsonwebtoken = "8.1.1"
serde = {version = "1.0", features = ["derive"] }
clap = { version ="3.2", features = ["derive"] }
tonic = "0.8.1"
prost = "0.11"
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }

# server binary
[[bin]]
    name = "server"
    path = "src/server.rs"

# client binary
[[bin]]
    name = "client"
    path = "src/client.rs"